[gd_scene load_steps=6 format=3 uid="uid://cm74ua71htqoa"]

[ext_resource type="Script" path="res://scripts/wall.gd" id="1_p0up6"]
[ext_resource type="Texture2D" uid="uid://bx60gix36my3l" path="res://assets/wireframe-draft.png" id="2_ef8rx"]
[ext_resource type="Texture2D" uid="uid://by6g8hciw3vj4" path="res://assets/front sprite sheet.png" id="3_xlm2f"]
[ext_resource type="Texture2D" uid="uid://1a4ok6ygaqf6" path="res://assets/wall.png" id="4_bwqpa"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fqsl3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("2_ef8rx")
}, {
"duration": 1.0,
"texture": ExtResource("3_xlm2f")
}, {
"duration": 1.0,
"texture": ExtResource("4_bwqpa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Wall" type="StaticBody2D"]
z_index = 3
scale = Vector2(1, 0.99831)
input_pickable = true
script = ExtResource("1_p0up6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(0.1, 0.1)
polygon = PackedVector2Array(-70, -60.1016, -90, -50.0846, -90, -20.0339, 80, 30.0508, 100, 10.0169, 90, -10.0169)

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_fqsl3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
scale = Vector2(0.1, 0.1)
polygon = PackedVector2Array(-46, -53.0897, -79, -37.0626, -78, 14.0237, 53, 58.0982, 79, 30.0508, 77, -15.0254)

[node name="cane_range" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cane_range"]
scale = Vector2(1, 1)
polygon = PackedVector2Array(-11, -5.00846, -4, -8.01354, 10, -3.00508, 10, 3.00508, 5, 9.01523, -11, 3.00508)

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="cane_range" to="." method="_on_area_2d_2_area_entered"]
[connection signal="area_exited" from="cane_range" to="." method="_on_cane_range_area_exited"]
